@@ -81,6 +81,13 @@ class AntergosThemeUtils {
 	}
 
 
+	/**
+	 * Initialize greeter theme heartbeat. Themes start the heartbeat by sending a post message
+	 * via JavaScript. Once started, the heartbeat will schedule a check to ensure that the
+	 * theme has sent a subsequent heartbeat message. Once started, if a heartbeat message was not
+	 * received by the time greeter's check runs it will assume that there has been an error
+	 * in the web process and fallback to the simple theme.
+	 */
 	initialize_theme_heartbeat() {
 		var heartbeats = 0;
 
@@ -92,6 +99,18 @@ class AntergosThemeUtils {
 				console.log('Sending heartbeat...');
 			}
 		}, 5000);
+	}
+
+
+	/**
+	 * Exits the heartbeat.
+	 *
+	 * Before starting the user's session, themes should exit the heartbeat
+	 * to prevent a race condition when the greeter is shutting down.
+	 */
+	stop_theme_heartbeat() {
+		window.webkit.messageHandlers.GreeterBridge.postMessage('Heartbeat::Exit');
+		clearInterval(this.heartbeat);
 	}
 
 
@@ -259,7 +278,6 @@ class AntergosThemeUtils {
 		return images;
 	}
 }
-
 
 
 
@@ -466,25 +484,15 @@ class AntergosTheme {
 	 * Initialize the theme.
 	 */
 	initialize() {
-		_util.log('initialize() starting.');
 		this.prepare_translations();
-		_util.log('initialize() 1.');
 		this.do_static_translations();
-		_util.log('initialize() 2.');
 		this.initialize_clock();
-		_util.log('initialize() 3.');
 		this.prepare_login_panel_header();
-		_util.log('initialize() 4.');
 		this.prepare_user_list();
-		_util.log('initialize() 5.');
 		this.prepare_session_list();
-		_util.log('initialize() 6.');
 		this.prepare_system_action_buttons();
-		_util.log('initialize() 7.');
 		this.register_callbacks();
-		_util.log('initialize() 8.');
 		this.background_manager.setup_background_thumbnails();
-		_util.log('initialize() finished.');
 	}
 
 
@@ -769,6 +777,9 @@ class AntergosTheme {
 
 		if ( lightdm.is_authenticated ) {
 			// The user entered the correct password. Let's log them in.
+			// But first, we need to exit the theme heartbeat to prevent a race condition.
+			_util.stop_theme_heartbeat();
+
 			$( 'body' ).fadeOut( 1000, () => {
 				lightdm.login( lightdm.authentication_user, selected_session );
 			} );
@@ -823,6 +834,8 @@ class AntergosTheme {
 
 		$modal.find( '.btn-primary' ).text( _util.translations[ action ] ).click( action, ( event ) => {
 			$( this ).off( 'click' );
+			// Stop theme heartbeat to prevent race condition.
+			_util.stop_theme_heartbeat();
 			lightdm[ event.data ]();
 		} );
 		$modal.find( '.btn-default' ).click( () => {
@@ -883,6 +896,9 @@ class AntergosTheme {
 }
 
 
+
+
+
 /**
  * Initialize the theme once the window has loaded.
  */
@@ -890,4 +906,3 @@ $( window ).load( () => {
 	new AntergosThemeUtils();
 	new AntergosTheme();
 } );
-
