@@ -1,3 +1,8 @@
+Overview of changes in lightdm-webkit2-greeter 2.1.4
+
+    * Implemented a theme heartbeat to allow the greeter to detect and respond to theme failures.
+    * Updated translations.
+
 Overview of changes in lightdm-webkit2-greeter 2.1.3
 
     * Implemented work-around in default theme for webkit2gtk localStorage bug.
